data/derived/comb/progs/unify/prog8704.ml.out
Characters 77-88:
  | h::t -> matchHeads (explode w);;
                       ^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type string
